Fix up obvious problems